# Hermes-Relay

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  app.js  robots.txt  styles.css
docs/: architecture.md  cli-guide.md  desktop-packaging.md  desktop-shell.md  emergency-relay-playbook.md  github-pages.md  operator-quickstart.md  protocol-spec.md  python-wrapper.md  relay-node.md  service-operations.md  simulator-and-operations.md  storage-and-relay-policy.md  threat-model.md
fuzz/: fuzz_envelope.c
include/hermes/: api.h  bundle.h  crypto.h  envelope.h  identity.h  log.h  platform.h  relay.h  status.h  store.h  sync.h  transport.h  types.h  util.h  version.h
packaging/: README.md
packaging/linux/: hermes-relay@.service
packaging/macos/: org.hermesrelay.node.plist
packaging/windows/: hermes-relay-service.xml
python/: README.md  pyproject.toml
python/scripts/: package-desktop.sh
python/src/hermes_desktop/: __init__.py  __main__.py  binding.py  core.py  network_status.py  relay_process.py  web_local.py  webview_app.py  workspace.py
python/src/hermes_desktop/assets/: __init__.py  index.html
scripts/: build.sh  package.sh
site/: 404.html  index.html  site.webmanifest  sitemap.xml  styles.css
src/: api.c  bundle.c  cli.c  crypto_openssl.c  envelope.c  identity.c  log.c  platform_posix.c  platform_win32.c  relay.c  sim.c  store_fs.c  sync.c  transport_tcp.c  util.c
tests/: test_main.c  test_relay_service.sh
